fixed slider width on mobile

--- a/styles.css
+++ b/styles.css
@@ -57,4 +57,7 @@ button:hover {
         width: 400px;
         height: 400px;
     }
+    #slider {
+        width: 400px;
+    }
   }
